--- a/dashBoard/mobile/myplacepage2.html
+++ b/dashBoard/mobile/myplacepage2.html
@@ -134,17 +134,17 @@
 
 
         <div class="mt-2">
-          <div class="d-flex justify-content-between">
             <p class="mobile-profile-font-1 py-3 mb-0  px-3" style="background: #fafafa;">Calendar sync</p>
-          </div>
 
+            <a href="./myplacesubmobile/importExport.html" style="text-decoration: none;">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
-            <div class="d-flex gap-2 align-items-center ">
-              <img src="../../img/Swap 1.svg" alt="">
+              <div class="d-flex gap-2 align-items-center ">
+                <img src="../../img/Swap 1.svg" alt="">
               <p class="mobile-profile-font-2 mb-0">Import/Export Calendar</p>
             </div>
-            <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
-          </div>
+          <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
+        </div>
+      </a>
 
         </div>
 
