--- a/dashBoard/mobile/pricingmobile.html
+++ b/dashBoard/mobile/pricingmobile.html
@@ -47,13 +47,13 @@
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
          </a>
-         <a style="text-decoration: none;" href="../booking.html">
+         <a style="text-decoration: none;" href="./pricingsubmobile/FeesandTaxes.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <p class="mobile-profile-font-2 mb-0">Fees and Taxes</p>
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
          </a>
-         <a style="text-decoration: none;" href="../booking.html">
+         <a style="text-decoration: none;" href="./pricingsubmobile/standardrates.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <p class="mobile-profile-font-2 mb-0">Discounts</p>
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
