--- a/dashBoard/mobile/rulesAndPolicesMobile.html
+++ b/dashBoard/mobile/rulesAndPolicesMobile.html
@@ -33,20 +33,20 @@
       </div>
 
       <div class="main">
-        <a style="text-decoration: none;" href="../booking.html">
+        <a style="text-decoration: none;" href="./RulesAndPolicessubmobile/Staytypes.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
               <p class="mobile-profile-font-2 mb-0">Stay types</p>
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
         </a>
 
-         <a style="text-decoration: none;" href="../booking.html">
+         <a style="text-decoration: none;" href="./RulesAndPolicessubmobile/Cancellationpolicies.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <p class="mobile-profile-font-2 mb-0">Cancellation policies</p>
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
          </a>
-         <a style="text-decoration: none;" href="../booking.html">
+         <a style="text-decoration: none;" href="./RulesAndPolicessubmobile/Houserules.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <p class="mobile-profile-font-2 mb-0">House rules</p>
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
