--- a/dashBoard/mobile/myplacepage1.html
+++ b/dashBoard/mobile/myplacepage1.html
@@ -140,13 +140,15 @@
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
 
+          <a style="text-decoration: none;" href="./myplace1submobile/PropertyDetails.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
-            <div class="d-flex gap-2 align-items-center ">
-              <img src="../../img/Edit Square.svg" alt="">
-              <p class="mobile-profile-font-2 mb-0">Property Details</p>
+              <div class="d-flex gap-2 align-items-center ">
+                <img src="../../img/Edit Square.svg" alt="">
+                <p class="mobile-profile-font-2 mb-0">Property Details</p>
+              </div>
+              <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
             </div>
-            <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
-          </div>
+          </a>
 
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <div class="d-flex gap-2 align-items-center ">
