--- a/dashBoard/photos.html
+++ b/dashBoard/photos.html
@@ -83,6 +83,10 @@
       .profile-desktop-version {
         display: none !important;
       }
+    .photos-grid {
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr);
+   }
     }
   </style>
 </head>
@@ -91,7 +95,7 @@
 
   <div>
     <div class="container">
-      <div class=" mx-3">
+      <div class=" mx-3 profile-desktop-version">
         <div class="w-100">
           <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
             <div class="col-md-3 mb-md-0 ">
@@ -156,7 +160,7 @@
     <hr class="mt-0">
   </div>
 
-  <div class="container" style="max-width: 1550px;">
+  <div class="container profile-desktop-version" style="max-width: 1550px;">
     <div class="d-flex justify-content-between align-items-start container">
       <div class="">
         <p class=" dashboard-font-5">A small room in denver</p>
@@ -187,7 +191,7 @@
 
   <hr>
 
-  <div class="container" style="max-width: 1550px;">
+  <div class="container " style="max-width: 1550px;">
     <div class="container d-flex justify-content-evenly align-items-start ">
       <div class="left-l-d">
         <div class="1">
@@ -252,7 +256,7 @@
     <br>
         <div>
           <p class="dashboard-font-14">Other Pictures</p>
-          <div class="d-flex gap-2 flex-wrap">
+          <div class="d-flex gap-2 flex-wrap photos-grid">
             <div class="cover-photo">
               <div class="edit-remove ">
                  <p class="mb-0 dashboard-font-21">Remove from cover</p>
