--- a/dashBoard/mobile/myplace1submobile/FeaturesandAmenities.html
+++ b/dashBoard/mobile/myplace1submobile/FeaturesandAmenities.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Crew dogs</title>
+  
   <link href="../../../css/bootstrap.css" rel="stylesheet">
   <link href="../../../css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 
   <style>
     .bb-hr {
@@ -39,7 +41,7 @@
         <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Features and Amenities</p>
       </div>
        <div class="px-2">
-        <div class="filter-menu flex-wrap mt-3 d-flex" style="padding-left: 0;">
+        <div class="filter-menu flex-wrap mt-3 d-flex gap-2" style="padding-left: 0;">
           <button type="button" class="btn btn-cd-light btn-pill active">
             <img src="../../../img/bed-1.svg" alt=""> Room
           </button>
@@ -60,9 +62,9 @@
           </button>
         </div>
     
-        <p class="">Parking type</p>
         <br>
         <br>
+        <p class="tx-dark">Parking type</p>
         <input type="text" class="form-select" placeholder="Card number">
         <br>
         <br>
