--- a/dashBoard/mobile/myplace1submobile/PropertyDetails.html
+++ b/dashBoard/mobile/myplace1submobile/PropertyDetails.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .bb-hr {
       border-bottom: 1px solid var(--LIGHT-GRAY, #F1F1F1);
@@ -66,7 +66,7 @@
             <p class="personalinfor-header-1 mb-0">Address</p>
             <p class="details-header-font-4">123 Oak Marsh Dr. Mount Pleasant, SC 2....</p>
           </div>
-          <button class="edit-button" style="width: fit-content;">Edit</button>
+          <button class="edit-button pi-font-6-1" style="width: fit-content;">Edit</button>
         </div>
 
         <hr>
@@ -87,6 +87,7 @@
             </div>
           </div>
         </div>
+        <br>
 
         <div class="bb-hr  py-2 d-flex justify-content-between align-items-center">
           <p class="personalinfor-header-1 mb-0">Bathrooms</p>
@@ -109,20 +110,24 @@
             <p class="mb-0">ft</p>
           </div>
         </div>
-
+        <br>
         <div>
-          <p class="">Room details</p>
+          <p class="personalinfor-header-1">Room details</p>
           <div class="input-box-1">
             <p class="mb-0 personalinfor-header-1">Furnished room</p>
             <div class="form-check form-switch">
               <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
             </div>
           </div>
-          <p class="">Bathroom type</p>
+          <br>
+          <br>
+          <p class="personalinfor-header-1 ">Bathroom type</p>
           <input type="text" class="form-select ui dropdown" placeholder="Shared">
+          <br>
           <br>
           <div class="bb-hr  py-2 d-flex justify-content-between align-items-center">
             <p class="personalinfor-header-1 mb-0">Bedrooms</p>
+      
             <div class="flex-c-1">
               <div class="svg-1" style="width: 35px; height: 35px;">
                 <img src="../../../img/Close.svg" alt="">
