--- a/dashBoard/mobile/myplacesubmobile/statLengths.html
+++ b/dashBoard/mobile/myplacesubmobile/statLengths.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .right-arrow {height: 12px;}
     .mobile-profile-font-2 {font-size: 14px !important;}
@@ -42,15 +42,15 @@ background: var(--White-White-100, #FFF);
         <a href="../myplacepage2.html" class="">
           <img src="../../../img/arrow_back.svg" alt="">
           </a>
-        <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Pricing</p>
+        <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Stay lengths</p>
       </div>
 
       <div class="px-2">
         <div class="d-flex flex-column gap-3">
-          <p class="mobile-profile-font-1 py-3 mb-0">Minimum stay length</p>
+          <p class="dashboard-font-15 py-3 mb-0">Minimum stay length</p>
           <div class="d-flex gap-3">
-            <input type="text" class="" style="flex-grow: 1;">
-            <select name="" id="" class="dropdpwn-statlength">
+            <input type="text" class="form-select" style="--bs-form-select-bg-img: none; flex-grow: 1;">
+            <select name="" id="" class="ui dropdown form-select" style="width: 100px;">
               <option value="days">days</option>
               <option value="months">months</option>
               <option value="years">years</option>
@@ -58,10 +58,10 @@ background: var(--White-White-100, #FFF);
           </div>
           </div>
         <div class="d-flex flex-column gap-3">
-          <p class="mobile-profile-font-1 py-3 mb-0">Maximum stay length</p>
+          <p class="dashboard-font-15 py-3 mb-0">Maximum stay length</p>
           <div class="d-flex gap-3">
-            <input type="text" placeholder="Optional" class="" style="flex-grow: 1;">
-            <select name="" id="" class="dropdpwn-statlength">
+            <input type="text"  placeholder="Optional" class="form-select" style="--bs-form-select-bg-img: none; flex-grow: 1;">
+            <select name="" id="" class="ui dropdown form-select" style="width: 100px;">
               <option value="days">days</option>
               <option value="months">months</option>
               <option value="years">years</option>
