--- a/dashBoard/mobile/pricingsubmobile/standardrates.html
+++ b/dashBoard/mobile/pricingsubmobile/standardrates.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .navrates {
       display: flex;
@@ -49,7 +50,7 @@
       <a href="../pricingmobile.html">
         <img src="../../../img/arrow_back.svg" alt="">
       </a>
-      <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Available date</p>
+      <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Rates</p>
     </div>
     <div class="d-flex justify-content-evenly mx-auto mt-2"
       style="width: 80%; border-bottom: 1px solid var(--LIGHT-GRAY, #F1F1F1);">
@@ -67,8 +68,8 @@
   <div class="Base mt-3 px-3">
     <div class="d-flex justify-content-between">
       <div>
-        <p>Free</p>
-        <p>Join the Space-A community and host your place for no charge. </p>
+        <p class="dashboard-font-13 mb-0">Free</p>
+        <p class="dashboard-font-16 mb-0">Join the Space-A community and host your place for no charge. </p>
       </div>
       <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
@@ -77,8 +78,8 @@
     <hr>
     <div class="d-flex justify-content-between">
       <div>
-        <p>Paid</p>
-        <p>Set a single rate or multiple rates.</p>
+        <p class="dashboard-font-13 mb-0">Paid</p>
+        <p class="dashboard-font-16">Set a single rate or multiple rates.</p>
       </div>
       <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
@@ -87,7 +88,7 @@
     <div class=" d-flex flex-column gap-3 mb-3">
 
     <div class=" d-flex flex-column gap-2">
-      <p class="msg-side-font-14">Daily</p>
+      <p class="dashboard-font-15">Daily</p>
       <div class="input-11">
         <p class="mb-0">$</p>
         <input type="text" placeholder="24" class="form-control">
@@ -95,7 +96,7 @@
     </div>
 
     <div class=" d-flex flex-column gap-2">
-      <p class="msg-side-font-14">Weekly</p>
+      <p class="dashboard-font-15">Weekly</p>
       <div class="input-11">
         <p class="mb-0">$</p>
         <input type="text" placeholder="120" class="form-control">
@@ -103,7 +104,7 @@
     </div>
 
     <div class=" d-flex flex-column gap-2">
-      <p class="msg-side-font-14">Monthly</p>
+      <p class="dashboard-font-15">Monthly</p>
       <div class="input-11">
         <p class="mb-0">$</p>
         <input type="text" placeholder="700" class="form-control">
