--- a/dashBoard/mobile/RulesAndPolicessubmobile/Cancellationpolicies.html
+++ b/dashBoard/mobile/RulesAndPolicessubmobile/Cancellationpolicies.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .right-arrow {
       height: 12px;
@@ -123,7 +123,8 @@
         Full refund up to 30 days before arrival. After that, the first 30 days of the stay are non-refundable. This is not applied for stays of greater than 4 months. This should be covered in the lease agreement. 
       </p>
     </div>
-
+   <br>
+   <br>
     <button class="save m-auto" style="width: 70%; border-radius: 5rem;"> Save</button>
 
  <br>
