--- a/dashBoard/mobile/RulesAndPolicessubmobile/Houserules.html
+++ b/dashBoard/mobile/RulesAndPolicessubmobile/Houserules.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .right-arrow {
       height: 12px;
@@ -87,7 +87,7 @@ background: var(--Gray-04, #FCFCFC);
       <a href="../rulesAndPolicesMobile.html" class="">
         <img src="../../../img/arrow_back.svg" alt="">
       </a>
-      <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">House Rules</p>
+      <p class="dashboard-font-25" style="color: #090A0A; padding: 12px;">House Rules</p>
     </div>
 
 
@@ -157,14 +157,14 @@ background: var(--Gray-04, #FCFCFC);
 
       <div>
 
-        <div class="addfee">
-          <p class="dashboard-font-23 mb-0">Check-in and Checkout times</p>
+        <div class="addfee" style="padding: 24px 0;">
+          <p class="dashboard-font-23">Check-in and Checkout times</p>
           <div class="fee-added-box">
-            <div>
-              <p class="dashboard-font-10 mb-0">Check-in: 12:00 PM - 2:00 PM</p>
-              <p class="pi-font-6-1 mb-0">Checkout: Flexible</p>
+            <div >
+              <p class="dashboard-font-10 mb-0">Check-in: <span class="pi-font-6-1">12:00 PM - 2:00 PM</span></p>
+              <p class="dashboard-font-10 mb-0">Checkout: <span class="pi-font-6-1">Flexible</span> </p>
             </div>
-            <button type="button" class="edit-button" style="width: fit-content;" data-bs-toggle="modal"
+            <button type="button" class="pi-font-6-1 edit-button" style="width: fit-content;" data-bs-toggle="modal"
             data-bs-target="#checkin-checkout-edit-1">
             Edit
           </button>
@@ -176,23 +176,23 @@ background: var(--Gray-04, #FCFCFC);
           </button>
         </div>
 
-
-        <div class="addfee">
-          <p class="dashboard-font-23 mb-0">Additional Rules</p>
+  <hr class="bb-hr m-0">
+        <div class="addfee" style="padding: 24px 0;">
+          <p class="dashboard-font-23">Additional Rules</p>
           <div class="fee-added-box">
             <div>
               <p class="mb-0"> Rule 1: </p>
-              <p>
+              <p class="dashboard-font-10 mb-0">
                 We do not allow small children on the dock due to the raised planks. Please keep all children....
               </p>
             </div>
-            <button type="button" class="edit-button" style="width: fit-content;" data-bs-toggle="modal"
+            <button type="button" class="pi-font-6-1 edit-button" style="width: fit-content;" data-bs-toggle="modal"
               data-bs-target="#edit-riles-1">
               Edit
             </button>
           </div>
           <!-- Button trigger modal Add Fee -->
-          <button type="button" class="dashboard-font-24" style="background: none; border: none;" data-bs-toggle="modal"
+          <button type="button" class=" dashboard-font-24" style="background: none; border: none;" data-bs-toggle="modal"
             data-bs-target="#Additional-Rules">
             Add
           </button>
@@ -214,24 +214,24 @@ background: var(--Gray-04, #FCFCFC);
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body px-1">
-          <p class="">Check-in window</p>
+          <p class="dashboard-font-14">Check-in window</p>
             
           <div class="start-end-time">
-            <select class="ui dropdown form-select " style=" margin-bottom: 20px; max-width: 100% !important; padding: 24px !important;">
+            <select class="ui dropdown form-select pi-font-6-1" style=" margin-bottom: 20px; max-width: 100% !important; padding: 24px !important;">
               <option value="">Starting time</option>
               <option value="1">yes</option>
               <option value="0">no</option>
             </select>
             <div class="line"></div>
-            <select class="ui dropdown form-select " style=" margin-bottom: 20px; max-width: 100% !important; padding: 24px !important;">
+            <select class="ui dropdown form-select pi-font-6-1" style=" margin-bottom: 20px; max-width: 100% !important; padding: 24px !important;">
               <option value="">End time</option>
               <option value="1">yes</option>
               <option value="0">no</option>
             </select>
           </div>
 
-          <p class="">Checkout time</p>
-          <select class="ui dropdown form-select " style=" margin-bottom: 20px; max-width: 100% !important; padding: 24px !important;">
+          <p class="dashboard-font-14">Checkout time</p>
+          <select class="ui dropdown form-select pi-font-6-1" style=" margin-bottom: 20px; max-width: 100% !important; padding: 24px !important;">
             <option value="">Select time</option>
             <option value="1">yes</option>
             <option value="0">no</option>
@@ -255,7 +255,7 @@ background: var(--Gray-04, #FCFCFC);
         </div>
         <div class="modal-body">
           <div class="px-2">
-            <p class="">Check-in window</p>
+            <p class="dashboard-font-14">Check-in window</p>
             <input type="text" class="form-select"
             placeholder="Card number">
           </div>
@@ -294,7 +294,7 @@ background: var(--Gray-04, #FCFCFC);
     <div class="modal-dialog modal-fullscreen">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Add fee</h1>
+          <h1 class="personalinfor-header-1 modal-title fs-5" id="exampleModalLabel">Add fee</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
