--- a/dashBoard/mobile/RulesAndPolicessubmobile/Staytypes.html
+++ b/dashBoard/mobile/RulesAndPolicessubmobile/Staytypes.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .right-arrow {height: 12px;}
     .mobile-profile-font-2 {font-size: 14px !important;}
@@ -59,7 +59,7 @@ background: var(--White-White-100, #FFF);
           <img src="../../../img/truck-long-term.svg" alt=""> Long Term
         </button>
       </div>
-      <button type="button" class="dashboard-font-24" style="background: none; border: none;">
+      <button type="button" class="mt-3 dashboard-font-24" style="background: none; border: none;">
         Learn more
       </button>
     </section>
