--- a/dashBoard/mobile/myplacepage2.html
+++ b/dashBoard/mobile/myplacepage2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .bb-hr {
       border-bottom: 1px solid var(--LIGHT-GRAY, #F1F1F1);
