--- a/dashBoard/mobile/myplacesubmobile/Availabledates.html
+++ b/dashBoard/mobile/myplacesubmobile/Availabledates.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .right-arrow {height: 12px;}
     .mobile-profile-font-2 {font-size: 14px !important;}
@@ -43,15 +44,16 @@ background: var(--White-White-100, #FFF);
           </a>
         <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Available date</p>
       </div>
-
+      <br>
       <div class="px-2">
         <div class="d-flex flex-column gap-3">
-          <p class="mobile-profile-font-1 py-3 mb-0">Availability starting</p>
-          <input type="text" class="" placeholder="MM/DD/YYYY" style="width: 100% !important;" >
-          </div>
+          <p class="dashboard-font-15 mb-0">Availability starting</p>
+          <input type="text" class="form-select" placeholder="MM/DD/YYYY" style="width: 100% !important;" >
+        </div>
+        <br>
         <div class="d-flex flex-column gap-3">
-          <p class="mobile-profile-font-1 py-3 mb-0">End date</p>
-          <input type="text" class="" placeholder="Optional" style="width: 100% !important;" >
+          <p class="dashboard-font-15 mb-0">End date</p>
+          <input type="text" class="form-select" placeholder="Optional" style="width: 100% !important;" >
           </div>
          <button class="save w-100 mt-3">Save</button>
       </div>
