--- a/dashBoard/mobile/myplacesubmobile/importExport.html
+++ b/dashBoard/mobile/myplacesubmobile/importExport.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +21,8 @@
       </a>
   <div class="mt-2" >
     <p class="pi-font-7 " style="text-align: center;">Connect to another website</p>
-    <p class="dashboard-font-12">Connect other calendars you use and we’ll automatically keep this listing’s availability up-to-date. If this is your first time, please visit our Help Center.
+    <p class="dashboard-font-12">Connect other calendars you use and we’ll automatically keep this listing’s availability up-to-date. If this is your first time, please visit our 
+      <a href="#">Help Center.</a>
     </p>
   </div>
   <div class="">
