--- a/dashBoard/mobile/pricingsubmobile/OfficialTravelRates.html
+++ b/dashBoard/mobile/pricingsubmobile/OfficialTravelRates.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../../../css/fonts.css">
   <link rel="stylesheet" href="../../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .navrates {
       display: flex;
@@ -183,6 +184,9 @@
      </div>
     </div>
     <!-- Without-Non-A ends -->
+
+    <br>
+    <br>
   </div>
 
   <script src="../../../js/bootstrap.bundle.min.js"></script>
