--- a/dashBoard/mobile/rulesAndPolicesMobile.html
+++ b/dashBoard/mobile/rulesAndPolicesMobile.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../css/fonts.css">
   <link rel="stylesheet" href="../../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <style>
     .right-arrow {height: 12px;}
     .mobile-profile-font-2 {font-size: 14px !important;}
